passGen: Update keyboard shortcuts in manifest and options page for clarity and consistency

--- a/extension/options/options.html
+++ b/extension/options/options.html
@@ -243,6 +243,7 @@
       border-radius: var(--radius);
       font-family: monospace;
       font-size: 12px;
+      min-width: 300px;
     }
 
     .button-row {
@@ -644,12 +645,12 @@
       
       <div class="shortcut-row">
         <span>Generate and fill a password</span>
-        <span class="shortcut-key">Alt+Shift+G</span>
+        <span class="shortcut-key">Alt+Shift+G <span style="font-size: 11px; opacity: 0.8;">(Win/Linux: Alt+Shift+G, Mac: Option+Shift+G)</span></span>
       </div>
       
       <div class="shortcut-row">
         <span>Open the password generator popup</span>
-        <span class="shortcut-key">Alt+P</span>
+        <span class="shortcut-key">Alt+P <span style="font-size: 11px; opacity: 0.8;">(Win/Linux: Alt+P, Mac: Option+P)</span></span>
       </div>
     </div>
 
