passGen: Enhance options and popup pages with reset and save buttons; update footer copyright format
- Added "Reset to Defaults" and "Save Settings" buttons to the options page for improved user control.
- Updated footer copyright text in both options and popup pages for consistency and clarity.
- Adjusted layout in the Index page to ensure proper flex behavior and footer positioning.

--- a/extension/options/options.html
+++ b/extension/options/options.html
@@ -636,6 +636,11 @@
       </div>
     </div>
 
+    <div class="button-row" style="margin-bottom: 24px;">
+      <button id="resetButton">Reset to Defaults</button>
+      <button id="saveButton" class="primary">Save Settings</button>
+    </div>
+
     <div class="section">
       <h2>Keyboard Shortcuts</h2>
       <p style="margin-bottom: 16px; color: var(--text-secondary);">
@@ -704,13 +709,8 @@
       </div>
     </div>
 
-    <div class="button-row">
-      <button id="resetButton">Reset to Defaults</button>
-      <button id="saveButton" class="primary">Save Settings</button>
-    </div>
-    
     <div class="footer-copyright">
-      <p>© 2025 CyberKeyGen. Developed by <a href="https://karthiklal.in" id="authorLink" class="author-link">KARTHIK LAL</a></p>
+      <p>© 2025 CyberKeyGen • ./run —by <a href="https://karthiklal.in" id="authorLink" class="author-link">KARTHIK LAL</a></p>
     </div>
   </div>
 
