--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -322,7 +322,7 @@
     </div>
   </div>
   <footer>
-    <div class="copyright">© 2025 CyberKeyGen. Developed by <a href="https://karthiklal.in" id="authorLink" class="author-link">KARTHIK LAL</a></div>
+    <div class="copyright">© 2025 CyberKeyGen • ./run —by <a href="https://karthiklal.in" id="authorLink" class="author-link">KARTHIK LAL</a></div>
   </footer>
   <script src="popup.js"></script>
 </body>
